# imessage

./: .dockerignore  .gitignore  .gitmodules  2FA_DEBUG_PROMPT.md  BACKFILL_BEEPER_PROMPT.md  BACKFILL_E2E_TEST_PROMPT.md  BEEPER_NETWORK_TYPE_PROMPT.md  Dockerfile  Info.plist  Makefile  README.md  RECEIPTS_PROMPT.md  compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
_todo/: TPP-robust-backfill.md
cmd/ck-probe/: main.go
cmd/matrix-rustpush/: main.go
cmd/mautrix-imessage/: login_cli.go  main.go  setup_darwin.go
docs/: cloudkit-guide.md  research-group-id-prompt.md
imessage/: interface.go  struct.go  struct_test.go
imessage/mac/: attributedstring.go  contacts.go  database.go  debug.go  groups.go  meowContacts.h  meowContacts.m  messages.go  send.go  sleepdetect.go
nac-validation/: Cargo.toml
nac-validation/src/: lib.rs  validation_data.m
patches/rustpush-upstream/: icloud-auth.patch  rustpush-core.patch
pkg/connector/: attachment_retrier.go  audioconvert.go  backfill.go  backfill_relay.go  bridgeadapter.go  capabilities.go  capabilities_test.go  carddav_crypto_test.go  chatdb.go  chatinfo.go  chatsync.go  client.go  cloud_backfill_store.go  cloud_contacts.go  command_carddav.go  command_contacts.go  commands.go  config.go  connector.go  contact_merge.go  contacts_relay.go  dbmeta.go  dbmeta_test.go  example-config.yaml  external_carddav.go  facetime.go  handleimessage.go  handlematrix.go  heic.go  identity_store.go  ids.go  login.go  pending_attachment_store.go  permissions_darwin.go  permissions_other.go  rustpush_capabilities.go  rustpush_client.go  rustpush_login.go  shared_profile.go  sharedstreams.go  (+3 more)
pkg/rustpushgo/: Cargo.toml  build.rs  rustpushgo.c  rustpushgo.go  rustpushgo.h
pkg/rustpushgo/src/: anisette.rs  hardware_info.h  hardware_info.m  lib.rs  local_config.rs  login_cli.rs  test_hwinfo.rs
rustpush/open-absinthe/: Cargo.toml  build.rs
rustpush/open-absinthe/src/: nac.rs
rustpush/src/: aps.rs  auth.rs  lib.rs  macos.rs  sharedstreams.rs  test.rs  util.rs
rustpush/src/icloud/: cloudkit.rs  (+1 more)
scripts/: bootstrap-linux.sh  install-beeper-linux.sh  install-beeper.sh  install-linux.sh  install.sh  patch_bindings.py  patch_bindings.sh  reset-bridge.sh
src/: aps.rs  auth.rs  error.rs  facetime.rs  findmy.rs  lib.rs  passwords.rs  sharedstreams.rs  statuskit.rs  test.rs  util.rs
src/icloud/: cloudkit.rs  keychain.rs
src/ids/: identity_manager.rs  user.rs
src/imessage/: aps_client.rs  cloud_messages.rs
tools/extract-key/: build.sh  go.mod  main.go
tools/extract-key-app/: build.sh
tools/nac-relay/: auth.go  chatdb.go  main.go
(+8 files in other folders)
