[package]
name = "rustpushgo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "rustpushgo"

[dependencies]
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0", features = ["tokio"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
icloud_auth = { path = "../../rustpush/apple-private-apis/icloud-auth", default-features = false }
omnisette = { path = "../../rustpush/apple-private-apis/omnisette", default-features = false }
rustpush = { path = "../../rustpush", default-features = false }
keystore = { path = "../../rustpush/keystore" }
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
sha2 = "0.10"
thiserror = "1.0.47"
async-trait = "0.1.73"
nac-validation = { path = "../../nac-validation" }
libc = "0.2"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
cc = "1.0"
