[package]
name = "rustpushgo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
name = "rustpushgo"

[[bin]]
name = "imessage-login"
path = "src/login_cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0", features = ["tokio"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
rustpush = { path = "../../rustpush", default-features = false, features = ["macos-validation-data"] }
keystore = { path = "../../rustpush/keystore" }
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }

uuid = { version = "1.4.1", features = ["v4"] }
sha2 = "0.10"
thiserror = "1.0.47"
async-trait = "0.1.73"
base64 = "0.21"
serde_json = "1.0"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# On macOS: native AOSKitAnisetteProvider (no extra features needed), plus local NAC.
icloud_auth = { path = "../../rustpush/apple-private-apis/icloud-auth", default-features = false }
omnisette = { path = "../../rustpush/apple-private-apis/omnisette", default-features = false }
nac-validation = { path = "../../nac-validation" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
# On Linux: omnisette needs remote-anisette-v3 to provide DefaultAnisetteProvider.
icloud_auth = { path = "../../rustpush/apple-private-apis/icloud-auth", default-features = false, features = ["remote-anisette-v3"] }
omnisette = { path = "../../rustpush/apple-private-apis/omnisette", default-features = false, features = ["remote-anisette-v3"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
cc = "1.0"
